--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+.instructions{
+    background-color: black;
+    display: flex;
+    align-items: center;
+    color: greenyellow;
+    flex-direction: column;
+    font-size: 60px;
+    font-family: monospace;
+}
+
 .bodyContainer{
     display: flex;
    
